[gd_scene load_steps=7 format=3 uid="uid://b57tyl5lof1m"]

[ext_resource type="Texture2D" uid="uid://c4qx5ibbb3yad" path="res://Assets/Factions/Bosses/Golem/Attack/se1.png" id="1_hvu6l"]
[ext_resource type="Script" path="res://Boss/Golem/skill_1.gd" id="1_w75mw"]
[ext_resource type="Texture2D" uid="uid://b4v4temnhmh6k" path="res://Assets/Factions/Bosses/Golem/Attack/se1b.png" id="2_7ix4e"]
[ext_resource type="Texture2D" uid="uid://dwcw15ccf3okb" path="res://Assets/Factions/Bosses/Golem/Attack/se1c.png" id="3_u31f3"]
[ext_resource type="Texture2D" uid="uid://c46rno70tsfk8" path="res://Assets/Factions/Bosses/Golem/Attack/se1d.png" id="4_pugpf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b60ff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pugpf")
}, {
"duration": 1.0,
"texture": ExtResource("3_u31f3")
}, {
"duration": 1.0,
"texture": ExtResource("2_7ix4e")
}, {
"duration": 1.0,
"texture": ExtResource("1_hvu6l")
}],
"loop": false,
"name": &"break",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hvu6l")
}, {
"duration": 1.0,
"texture": ExtResource("2_7ix4e")
}, {
"duration": 1.0,
"texture": ExtResource("3_u31f3")
}, {
"duration": 1.0,
"texture": ExtResource("4_pugpf")
}],
"loop": false,
"name": &"spike",
"speed": 4.0
}]

[node name="Skill1" type="Node2D"]
script = ExtResource("1_w75mw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.49077, 1.49077)
sprite_frames = SubResource("SpriteFrames_b60ff")
animation = &"break"
flip_h = true

[node name="RightCollision" type="Area2D" parent="."]
scale = Vector2(1.43101, 1.24457)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightCollision"]
polygon = PackedVector2Array(30.7475, -19.2838, 27.9523, 5.62443, 26.5547, 17.6768, 19.5666, 20.0873, 11.1809, 21.6942, 6.98807, 20.8908, -6.28926, 20.8908, -27.9523, 20.8908, -3.49404, -0.80349, -3.49404, 5.62443, 8.38569, -5.62443, 11.1809, -4.82094, 11.1809, 3.21396, 13.9761, 1.60698)

[node name="LeftCollision" type="Area2D" parent="."]
scale = Vector2(1.43101, 1.24457)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftCollision"]
position = Vector2(6.98807, 26.5152)
polygon = PackedVector2Array(-37.7356, -44.9955, -32.8439, -9.64188, -21.663, -6.42792, 8.38569, -6.42792, 20.2654, -5.62443, -3.49404, -26.5152, -2.09642, -19.2838, -16.7714, -30.5326, -17.4702, -23.3012, -20.9642, -23.3012)

[connection signal="area_entered" from="RightCollision" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="LeftCollision" to="." method="_on_area_2d_area_entered"]
